# differential-render

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  bootstrap.js  package.json  style.scss  webpack.config.js
crates/gigatrace/: Cargo.toml
crates/gigatrace/src/: iforest.rs  index.rs  lib.rs  trace.rs
src/: data.rs  lib.rs
src/timeline/: canvas.rs  constants.rs  mod.rs  properties.rs  render.rs  required_lines.rs  utils.rs
static/: index.html
test/data/: example.json  sruth.json
